@@ -1,5 +1,9 @@
 2005-10-12  Vincent Noel  <vnoel@cox.net>
 
+	* monitor.c (monitor_stop, monitor_start): Small cleanups.
+
+2005-10-12  Vincent Noel  <vnoel@cox.net>
+
 	* logview.c (loglist_unbold_log): Only unbold when the log is displayed.
 
 2005-10-12  Vincent Noel  <vnoel@cox.net>
